--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
+    "@fastify/swagger": "^9.7.0",
+    "@fastify/swagger-ui": "^5.2.5",
     "@prisma/client": "^6.4.1",
     "fastify": "^5.2.1",
     "fastify-decorators": "^3.16.1",
