add all application

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
     "@fastify/cors": "^10.0.2",
     "@fastify/swagger": "^9.7.0",
     "@fastify/swagger-ui": "^5.2.5",
+    "@langchain/core": "^1.1.26",
+    "@langchain/openai": "^1.2.8",
     "@prisma/client": "^6.4.1",
     "fastify": "^5.2.1",
     "fastify-decorators": "^3.16.1",
     "fastify-type-provider-zod": "^6.1.0",
     "inversify": "^7.11.0",
+    "langchain": "^1.2.25",
     "reflect-metadata": "^0.2.2",
     "zod": "^4.3.6"
   },
