--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,5 @@ OPENAI_API_KEY=
 YOUTUBE_API_KEY=
 ALLOWED_ORIGIN=https://yourdomain.com
 INTERNAL_API_SECRET=
+REDIS_HOST=localhost
+REDIS_PORT=6379
