--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@langchain/core": "^1.1.26",
     "@langchain/openai": "^1.2.8",
     "@prisma/client": "^6.4.1",
+    "bullmq": "^5.70.1",
     "fastify": "^5.2.1",
     "fastify-decorators": "^3.16.1",
     "fastify-type-provider-zod": "^6.1.0",
