--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.7.0",
     "@fastify/swagger-ui": "^5.2.5",
     "@langchain/core": "^1.1.26",
@@ -21,7 +22,9 @@
     "fastify-decorators": "^3.16.1",
     "fastify-type-provider-zod": "^6.1.0",
     "inversify": "^7.11.0",
+    "ioredis": "^5.9.3",
     "langchain": "^1.2.25",
+    "p-limit": "^3.1.0",
     "reflect-metadata": "^0.2.2",
     "zod": "^4.3.6"
   },
